# ESMtest

./: Makefile.am  Makefile.in  README.md  aclocal.m4  config.h  config.h.in  config.status  configure  configure.ac
Notes/: PLINKnotes.Rmd  PLINKnotes.html  PLINKnotes.md  WTCCCdata.Rmd  WTCCCdata.html  WTCCCdata.md  dbSNP.html  dbSNP.md  dbSNP.rmd
WTCCC_preprocess/: EXMerge.py  README.md  RSMerge.py  SNPID.py  WTCCC_toPEDMAP.py  WTCCCtoPED.py  chroms.txt  diseases.txt  getsnps.sh
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1  traces.2
fake_data/: Makefile  README.Rmd  README.md  bigperms.txt  fakeit.sh  ms2plink.cc  testperms.sh  times.txt  timesP190.txt  timesP1903e6.txt
mergeperms/: Makefile  mergeperms.cc
processperms/: Makefile  mergeperms.cc  mergepermsh5.cc  perms2gz.cc  perms2h5.cc
simulated_workflow/: 00_makebigdata.sh  00_makedata.sh  01_permute.sh  01_permutebig.sh  02_esmk.sh  02_esmkbig.sh  02_merge.sh  02_mergebig.sh  02_mergeperms.sh  03_esmk_merged.sh  03_esmk_mergedbig.sh  README.md  esm_multi_16.sh  esmk.sh  esmk_merged.sh  fake.bed  fake.bim  fake.map  merge.sh  permute.sh  submit.sh
simulated_workflow/big/: 00_makebigdata.sh  01_permutebig.sh  03_esmk_mergedbig.sh  esmk_mergedbig.sh  esmkbig.sh  makebigdata.sh  mergebig.sh  permutebig.sh  submitbig.sh
simulated_workflow/small/: README.md  esmk.sh  esmk_merged.sh  fake.bed  fake.bim  fake.fam  makedata.sh  merge.sh  permute.sh
src/: ESMH5type.hpp  H5util.cc  H5util.hpp  Makefile  Makefile.am  Makefile.in  README.md  esmk.cc  h5merge.py  ms2plink.cc  perms2h5.cc  slabunit.cc
src/.deps/: H5util.Po  esmk.Po  ms2plink.Po  perms2h5.Po
